{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Controls",
            "id": "97ac8537-35ca-403a-be47-e51ebf38576c",
            "actions": [
                {
                    "name": "LR",
                    "type": "PassThrough",
                    "id": "dfec804f-c2a1-48c5-bdb6-3fdac60c6dfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UD",
                    "type": "PassThrough",
                    "id": "acfb8ad5-7f59-4ce5-a35f-9c24d4a85a2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "88bf798b-298e-4630-806a-e86628a3e8b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mine",
                    "type": "Button",
                    "id": "d48bbddb-0d18-432a-b62a-df360ade933a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "d9937ad3-a441-4a5e-ad8e-712fcd22789a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LR",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2b10ae73-96fd-40f2-861a-1e6f4825da98",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1ff380ae-2f16-4bef-88b5-9acadd53b6b5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4443485d-8c66-4498-99bd-71c32bd8fff2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80ec5a3f-6589-421f-97fb-fb04653d4fd5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "0bc4a714-14c5-4d6f-b9ca-f96174ff1e54",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0254e645-a30e-4239-be66-1345e55435bf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f413c610-6d1d-4821-9e65-0c2543e17ed3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}